parser.output
Grammar

    0 $accept: template $end

    1 template: typelines

    2 typelines: typelines typeline
    3          | typeline

    4 typeline: header
    5         | declaration SEMICOLON
    6         | function

    7 header: HASH INCLUDE LESSTHAN IDENTIFIER GREATERTHAN

    8 declaration: rettype decl

    9 decl: decl COMMA IDENTIFIER
   10     | decl COMMA IDENTIFIER ASSIGNMENT expression
   11     | IDENTIFIER
   12     | IDENTIFIER ASSIGNMENT expression

   13 function: rettype IDENTIFIER OBRACE argsdefinition EBRACE OCBRACE blockstmts ECBRACE

   14 blockstmts: blockstmts blockstmt
   15           | blockstmt

   16 blockstmt: expression SEMICOLON
   17          | typeline
   18          | IF OBRACE expression EBRACE OCBRACE blockstmts ECBRACE
   19          | RETURN expression SEMICOLON

   20 rettype: TYPEAUTO
   21        | TYPEINT
   22        | TYPEFLOAT
   23        | TYPECHAR
   24        | TYPESTRING
   25        | TYPEVOID

   26 argsdefinition: argsdefinition COMMA IDENTIFIER
   27               | argsdefinition COMMA IDENTIFIER ASSIGNMENT expression
   28               | IDENTIFIER
   29               | IDENTIFIER ASSIGNMENT expression
   30               | %empty

   31 argscall: argscall COMMA expression
   32         | expression
   33         | %empty

   34 expression: IDENTIFIER ASSIGNMENT expression
   35           | OBRACE expression EBRACE
   36           | BITWISEINV expression
   37           | expression POWER expression
   38           | expression STAR expression
   39           | expression DIVISION expression
   40           | expression REMAINDER expression
   41           | expression PLUS expression
   42           | expression MINUS expression
   43           | expression LEFTSHIFT expression
   44           | expression RIGHTSHIFT expression
   45           | expression BITWISEAND expression
   46           | expression BITWISEXOR expression
   47           | expression BITWISEOR expression
   48           | expression LESSTHAN expression
   49           | expression GREATERTHAN expression
   50           | expression DOUBLEEQUAL expression
   51           | expression NOTEQUAL expression
   52           | expression LESSTHOREQ expression
   53           | expression GREATTHOREQ expression
   54           | NOT expression
   55           | expression AND expression
   56           | expression OR expression
   57           | IDENTIFIER
   58           | INT
   59           | STRING
   60           | CHAR
   61           | FLOAT
   62           | IDENTIFIER OBRACE argscall EBRACE


Terminals, with rules where they appear

$end (0) 0
error (256)
INT (258) 58
FLOAT (259) 61
STRING (260) 59
CHAR (261) 60
IDENTIFIER (262) 7 9 10 11 12 13 26 27 28 29 34 57 62
SEMICOLON (263) 5 16 19
TYPEINT (264) 21
TYPEFLOAT (265) 22
TYPECHAR (266) 23
TYPESTRING (267) 24
TYPEAUTO (268) 20
TYPEVOID (269) 25
RETURN (270) 19
HASH (271) 7
INCLUDE (272) 7
OCBRACE (273) 13 18
ECBRACE (274) 13 18
IF (275) 18
OBRACE (276) 13 18 35 62
EBRACE (277) 13 18 35 62
COMMA (278) 9 10 26 27 31
ASSIGNMENT (279) 10 12 27 29 34
OR (280) 56
AND (281) 55
NOT (282) 54
LESSTHAN (283) 7 48
GREATERTHAN (284) 7 49
DOUBLEEQUAL (285) 50
NOTEQUAL (286) 51
LESSTHOREQ (287) 52
GREATTHOREQ (288) 53
BITWISEOR (289) 47
BITWISEXOR (290) 46
BITWISEAND (291) 45
LEFTSHIFT (292) 43
RIGHTSHIFT (293) 44
PLUS (294) 41
MINUS (295) 42
STAR (296) 38
DIVISION (297) 39
REMAINDER (298) 40
POWER (299) 37
BITWISEINV (300) 36


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
template (47)
    on left: 1, on right: 0
typelines (48)
    on left: 2 3, on right: 1 2
typeline (49)
    on left: 4 5 6, on right: 2 3 17
header (50)
    on left: 7, on right: 4
declaration (51)
    on left: 8, on right: 5
decl (52)
    on left: 9 10 11 12, on right: 8 9 10
function (53)
    on left: 13, on right: 6
blockstmts (54)
    on left: 14 15, on right: 13 14 18
blockstmt (55)
    on left: 16 17 18 19, on right: 14 15
rettype (56)
    on left: 20 21 22 23 24 25, on right: 8 13
argsdefinition (57)
    on left: 26 27 28 29 30, on right: 13 26 27
argscall (58)
    on left: 31 32 33, on right: 31 62
expression (59)
    on left: 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51
    52 53 54 55 56 57 58 59 60 61 62, on right: 10 12 16 18 19 27 29
    31 32 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52
    53 54 55 56


State 0

    0 $accept: . template $end
    1 template: . typelines
    2 typelines: . typelines typeline
    3          | . typeline
    4 typeline: . header
    5         | . declaration SEMICOLON
    6         | . function
    7 header: . HASH INCLUDE LESSTHAN IDENTIFIER GREATERTHAN
    8 declaration: . rettype decl
   13 function: . rettype IDENTIFIER OBRACE argsdefinition EBRACE OCBRACE blockstmts ECBRACE
   20 rettype: . TYPEAUTO
   21        | . TYPEINT
   22        | . TYPEFLOAT
   23        | . TYPECHAR
   24        | . TYPESTRING
   25        | . TYPEVOID

    TYPEINT     shift, and go to state 1
    TYPEFLOAT   shift, and go to state 2
    TYPECHAR    shift, and go to state 3
    TYPESTRING  shift, and go to state 4
    TYPEAUTO    shift, and go to state 5
    TYPEVOID    shift, and go to state 6
    HASH        shift, and go to state 7

    template     go to state 8
    typelines    go to state 9
    typeline     go to state 10
    header       go to state 11
    declaration  go to state 12
    function     go to state 13
    rettype      go to state 14


State 1

   21 rettype: TYPEINT .

    $default  reduce using rule 21 (rettype)


State 2

   22 rettype: TYPEFLOAT .

    $default  reduce using rule 22 (rettype)


State 3

   23 rettype: TYPECHAR .

    $default  reduce using rule 23 (rettype)


State 4

   24 rettype: TYPESTRING .

    $default  reduce using rule 24 (rettype)


State 5

   20 rettype: TYPEAUTO .

    $default  reduce using rule 20 (rettype)


State 6

   25 rettype: TYPEVOID .

    $default  reduce using rule 25 (rettype)


State 7

    7 header: HASH . INCLUDE LESSTHAN IDENTIFIER GREATERTHAN

    INCLUDE  shift, and go to state 15


State 8

    0 $accept: template . $end

    $end  shift, and go to state 16


State 9

    1 template: typelines .  [$end]
    2 typelines: typelines . typeline
    4 typeline: . header
    5         | . declaration SEMICOLON
    6         | . function
    7 header: . HASH INCLUDE LESSTHAN IDENTIFIER GREATERTHAN
    8 declaration: . rettype decl
   13 function: . rettype IDENTIFIER OBRACE argsdefinition EBRACE OCBRACE blockstmts ECBRACE
   20 rettype: . TYPEAUTO
   21        | . TYPEINT
   22        | . TYPEFLOAT
   23        | . TYPECHAR
   24        | . TYPESTRING
   25        | . TYPEVOID

    TYPEINT     shift, and go to state 1
    TYPEFLOAT   shift, and go to state 2
    TYPECHAR    shift, and go to state 3
    TYPESTRING  shift, and go to state 4
    TYPEAUTO    shift, and go to state 5
    TYPEVOID    shift, and go to state 6
    HASH        shift, and go to state 7

    $default  reduce using rule 1 (template)

    typeline     go to state 17
    header       go to state 11
    declaration  go to state 12
    function     go to state 13
    rettype      go to state 14


State 10

    3 typelines: typeline .

    $default  reduce using rule 3 (typelines)


State 11

    4 typeline: header .

    $default  reduce using rule 4 (typeline)


State 12

    5 typeline: declaration . SEMICOLON

    SEMICOLON  shift, and go to state 18


State 13

    6 typeline: function .

    $default  reduce using rule 6 (typeline)


State 14

    8 declaration: rettype . decl
    9 decl: . decl COMMA IDENTIFIER
   10     | . decl COMMA IDENTIFIER ASSIGNMENT expression
   11     | . IDENTIFIER
   12     | . IDENTIFIER ASSIGNMENT expression
   13 function: rettype . IDENTIFIER OBRACE argsdefinition EBRACE OCBRACE blockstmts ECBRACE

    IDENTIFIER  shift, and go to state 19

    decl  go to state 20


State 15

    7 header: HASH INCLUDE . LESSTHAN IDENTIFIER GREATERTHAN

    LESSTHAN  shift, and go to state 21


State 16

    0 $accept: template $end .

    $default  accept


State 17

    2 typelines: typelines typeline .

    $default  reduce using rule 2 (typelines)


State 18

    5 typeline: declaration SEMICOLON .

    $default  reduce using rule 5 (typeline)


State 19

   11 decl: IDENTIFIER .  [SEMICOLON, COMMA]
   12     | IDENTIFIER . ASSIGNMENT expression
   13 function: rettype IDENTIFIER . OBRACE argsdefinition EBRACE OCBRACE blockstmts ECBRACE

    OBRACE      shift, and go to state 22
    ASSIGNMENT  shift, and go to state 23

    $default  reduce using rule 11 (decl)


State 20

    8 declaration: rettype decl .  [SEMICOLON]
    9 decl: decl . COMMA IDENTIFIER
   10     | decl . COMMA IDENTIFIER ASSIGNMENT expression

    COMMA  shift, and go to state 24

    $default  reduce using rule 8 (declaration)


State 21

    7 header: HASH INCLUDE LESSTHAN . IDENTIFIER GREATERTHAN

    IDENTIFIER  shift, and go to state 25


State 22

   13 function: rettype IDENTIFIER OBRACE . argsdefinition EBRACE OCBRACE blockstmts ECBRACE
   26 argsdefinition: . argsdefinition COMMA IDENTIFIER
   27               | . argsdefinition COMMA IDENTIFIER ASSIGNMENT expression
   28               | . IDENTIFIER
   29               | . IDENTIFIER ASSIGNMENT expression
   30               | . %empty  [EBRACE, COMMA]

    IDENTIFIER  shift, and go to state 26

    $default  reduce using rule 30 (argsdefinition)

    argsdefinition  go to state 27


State 23

   12 decl: IDENTIFIER ASSIGNMENT . expression
   34 expression: . IDENTIFIER ASSIGNMENT expression
   35           | . OBRACE expression EBRACE
   36           | . BITWISEINV expression
   37           | . expression POWER expression
   38           | . expression STAR expression
   39           | . expression DIVISION expression
   40           | . expression REMAINDER expression
   41           | . expression PLUS expression
   42           | . expression MINUS expression
   43           | . expression LEFTSHIFT expression
   44           | . expression RIGHTSHIFT expression
   45           | . expression BITWISEAND expression
   46           | . expression BITWISEXOR expression
   47           | . expression BITWISEOR expression
   48           | . expression LESSTHAN expression
   49           | . expression GREATERTHAN expression
   50           | . expression DOUBLEEQUAL expression
   51           | . expression NOTEQUAL expression
   52           | . expression LESSTHOREQ expression
   53           | . expression GREATTHOREQ expression
   54           | . NOT expression
   55           | . expression AND expression
   56           | . expression OR expression
   57           | . IDENTIFIER
   58           | . INT
   59           | . STRING
   60           | . CHAR
   61           | . FLOAT
   62           | . IDENTIFIER OBRACE argscall EBRACE

    INT         shift, and go to state 28
    FLOAT       shift, and go to state 29
    STRING      shift, and go to state 30
    CHAR        shift, and go to state 31
    IDENTIFIER  shift, and go to state 32
    OBRACE      shift, and go to state 33
    NOT         shift, and go to state 34
    BITWISEINV  shift, and go to state 35

    expression  go to state 36


State 24

    9 decl: decl COMMA . IDENTIFIER
   10     | decl COMMA . IDENTIFIER ASSIGNMENT expression

    IDENTIFIER  shift, and go to state 37


State 25

    7 header: HASH INCLUDE LESSTHAN IDENTIFIER . GREATERTHAN

    GREATERTHAN  shift, and go to state 38


State 26

   28 argsdefinition: IDENTIFIER .  [EBRACE, COMMA]
   29               | IDENTIFIER . ASSIGNMENT expression

    ASSIGNMENT  shift, and go to state 39

    $default  reduce using rule 28 (argsdefinition)


State 27

   13 function: rettype IDENTIFIER OBRACE argsdefinition . EBRACE OCBRACE blockstmts ECBRACE
   26 argsdefinition: argsdefinition . COMMA IDENTIFIER
   27               | argsdefinition . COMMA IDENTIFIER ASSIGNMENT expression

    EBRACE  shift, and go to state 40
    COMMA   shift, and go to state 41


State 28

   58 expression: INT .

    $default  reduce using rule 58 (expression)


State 29

   61 expression: FLOAT .

    $default  reduce using rule 61 (expression)


State 30

   59 expression: STRING .

    $default  reduce using rule 59 (expression)


State 31

   60 expression: CHAR .

    $default  reduce using rule 60 (expression)


State 32

   34 expression: IDENTIFIER . ASSIGNMENT expression
   57           | IDENTIFIER .  [SEMICOLON, EBRACE, COMMA, OR, AND, LESSTHAN, GREATERTHAN, DOUBLEEQUAL, NOTEQUAL, LESSTHOREQ, GREATTHOREQ, BITWISEOR, BITWISEXOR, BITWISEAND, LEFTSHIFT, RIGHTSHIFT, PLUS, MINUS, STAR, DIVISION, REMAINDER, POWER]
   62           | IDENTIFIER . OBRACE argscall EBRACE

    OBRACE      shift, and go to state 42
    ASSIGNMENT  shift, and go to state 43

    $default  reduce using rule 57 (expression)


State 33

   34 expression: . IDENTIFIER ASSIGNMENT expression
   35           | . OBRACE expression EBRACE
   35           | OBRACE . expression EBRACE
   36           | . BITWISEINV expression
   37           | . expression POWER expression
   38           | . expression STAR expression
   39           | . expression DIVISION expression
   40           | . expression REMAINDER expression
   41           | . expression PLUS expression
   42           | . expression MINUS expression
   43           | . expression LEFTSHIFT expression
   44           | . expression RIGHTSHIFT expression
   45           | . expression BITWISEAND expression
   46           | . expression BITWISEXOR expression
   47           | . expression BITWISEOR expression
   48           | . expression LESSTHAN expression
   49           | . expression GREATERTHAN expression
   50           | . expression DOUBLEEQUAL expression
   51           | . expression NOTEQUAL expression
   52           | . expression LESSTHOREQ expression
   53           | . expression GREATTHOREQ expression
   54           | . NOT expression
   55           | . expression AND expression
   56           | . expression OR expression
   57           | . IDENTIFIER
   58           | . INT
   59           | . STRING
   60           | . CHAR
   61           | . FLOAT
   62           | . IDENTIFIER OBRACE argscall EBRACE

    INT         shift, and go to state 28
    FLOAT       shift, and go to state 29
    STRING      shift, and go to state 30
    CHAR        shift, and go to state 31
    IDENTIFIER  shift, and go to state 32
    OBRACE      shift, and go to state 33
    NOT         shift, and go to state 34
    BITWISEINV  shift, and go to state 35

    expression  go to state 44


State 34

   34 expression: . IDENTIFIER ASSIGNMENT expression
   35           | . OBRACE expression EBRACE
   36           | . BITWISEINV expression
   37           | . expression POWER expression
   38           | . expression STAR expression
   39           | . expression DIVISION expression
   40           | . expression REMAINDER expression
   41           | . expression PLUS expression
   42           | . expression MINUS expression
   43           | . expression LEFTSHIFT expression
   44           | . expression RIGHTSHIFT expression
   45           | . expression BITWISEAND expression
   46           | . expression BITWISEXOR expression
   47           | . expression BITWISEOR expression
   48           | . expression LESSTHAN expression
   49           | . expression GREATERTHAN expression
   50           | . expression DOUBLEEQUAL expression
   51           | . expression NOTEQUAL expression
   52           | . expression LESSTHOREQ expression
   53           | . expression GREATTHOREQ expression
   54           | . NOT expression
   54           | NOT . expression
   55           | . expression AND expression
   56           | . expression OR expression
   57           | . IDENTIFIER
   58           | . INT
   59           | . STRING
   60           | . CHAR
   61           | . FLOAT
   62           | . IDENTIFIER OBRACE argscall EBRACE

    INT         shift, and go to state 28
    FLOAT       shift, and go to state 29
    STRING      shift, and go to state 30
    CHAR        shift, and go to state 31
    IDENTIFIER  shift, and go to state 32
    OBRACE      shift, and go to state 33
    NOT         shift, and go to state 34
    BITWISEINV  shift, and go to state 35

    expression  go to state 45


State 35

   34 expression: . IDENTIFIER ASSIGNMENT expression
   35           | . OBRACE expression EBRACE
   36           | . BITWISEINV expression
   36           | BITWISEINV . expression
   37           | . expression POWER expression
   38           | . expression STAR expression
   39           | . expression DIVISION expression
   40           | . expression REMAINDER expression
   41           | . expression PLUS expression
   42           | . expression MINUS expression
   43           | . expression LEFTSHIFT expression
   44           | . expression RIGHTSHIFT expression
   45           | . expression BITWISEAND expression
   46           | . expression BITWISEXOR expression
   47           | . expression BITWISEOR expression
   48           | . expression LESSTHAN expression
   49           | . expression GREATERTHAN expression
   50           | . expression DOUBLEEQUAL expression
   51           | . expression NOTEQUAL expression
   52           | . expression LESSTHOREQ expression
   53           | . expression GREATTHOREQ expression
   54           | . NOT expression
   55           | . expression AND expression
   56           | . expression OR expression
   57           | . IDENTIFIER
   58           | . INT
   59           | . STRING
   60           | . CHAR
   61           | . FLOAT
   62           | . IDENTIFIER OBRACE argscall EBRACE

    INT         shift, and go to state 28
    FLOAT       shift, and go to state 29
    STRING      shift, and go to state 30
    CHAR        shift, and go to state 31
    IDENTIFIER  shift, and go to state 32
    OBRACE      shift, and go to state 33
    NOT         shift, and go to state 34
    BITWISEINV  shift, and go to state 35

    expression  go to state 46


State 36

   12 decl: IDENTIFIER ASSIGNMENT expression .  [SEMICOLON, COMMA]
   37 expression: expression . POWER expression
   38           | expression . STAR expression
   39           | expression . DIVISION expression
   40           | expression . REMAINDER expression
   41           | expression . PLUS expression
   42           | expression . MINUS expression
   43           | expression . LEFTSHIFT expression
   44           | expression . RIGHTSHIFT expression
   45           | expression . BITWISEAND expression
   46           | expression . BITWISEXOR expression
   47           | expression . BITWISEOR expression
   48           | expression . LESSTHAN expression
   49           | expression . GREATERTHAN expression
   50           | expression . DOUBLEEQUAL expression
   51           | expression . NOTEQUAL expression
   52           | expression . LESSTHOREQ expression
   53           | expression . GREATTHOREQ expression
   55           | expression . AND expression
   56           | expression . OR expression

    OR           shift, and go to state 47
    AND          shift, and go to state 48
    LESSTHAN     shift, and go to state 49
    GREATERTHAN  shift, and go to state 50
    DOUBLEEQUAL  shift, and go to state 51
    NOTEQUAL     shift, and go to state 52
    LESSTHOREQ   shift, and go to state 53
    GREATTHOREQ  shift, and go to state 54
    BITWISEOR    shift, and go to state 55
    BITWISEXOR   shift, and go to state 56
    BITWISEAND   shift, and go to state 57
    LEFTSHIFT    shift, and go to state 58
    RIGHTSHIFT   shift, and go to state 59
    PLUS         shift, and go to state 60
    MINUS        shift, and go to state 61
    STAR         shift, and go to state 62
    DIVISION     shift, and go to state 63
    REMAINDER    shift, and go to state 64
    POWER        shift, and go to state 65

    $default  reduce using rule 12 (decl)


State 37

    9 decl: decl COMMA IDENTIFIER .  [SEMICOLON, COMMA]
   10     | decl COMMA IDENTIFIER . ASSIGNMENT expression

    ASSIGNMENT  shift, and go to state 66

    $default  reduce using rule 9 (decl)


State 38

    7 header: HASH INCLUDE LESSTHAN IDENTIFIER GREATERTHAN .

    $default  reduce using rule 7 (header)


State 39

   29 argsdefinition: IDENTIFIER ASSIGNMENT . expression
   34 expression: . IDENTIFIER ASSIGNMENT expression
   35           | . OBRACE expression EBRACE
   36           | . BITWISEINV expression
   37           | . expression POWER expression
   38           | . expression STAR expression
   39           | . expression DIVISION expression
   40           | . expression REMAINDER expression
   41           | . expression PLUS expression
   42           | . expression MINUS expression
   43           | . expression LEFTSHIFT expression
   44           | . expression RIGHTSHIFT expression
   45           | . expression BITWISEAND expression
   46           | . expression BITWISEXOR expression
   47           | . expression BITWISEOR expression
   48           | . expression LESSTHAN expression
   49           | . expression GREATERTHAN expression
   50           | . expression DOUBLEEQUAL expression
   51           | . expression NOTEQUAL expression
   52           | . expression LESSTHOREQ expression
   53           | . expression GREATTHOREQ expression
   54           | . NOT expression
   55           | . expression AND expression
   56           | . expression OR expression
   57           | . IDENTIFIER
   58           | . INT
   59           | . STRING
   60           | . CHAR
   61           | . FLOAT
   62           | . IDENTIFIER OBRACE argscall EBRACE

    INT         shift, and go to state 28
    FLOAT       shift, and go to state 29
    STRING      shift, and go to state 30
    CHAR        shift, and go to state 31
    IDENTIFIER  shift, and go to state 32
    OBRACE      shift, and go to state 33
    NOT         shift, and go to state 34
    BITWISEINV  shift, and go to state 35

    expression  go to state 67


State 40

   13 function: rettype IDENTIFIER OBRACE argsdefinition EBRACE . OCBRACE blockstmts ECBRACE

    OCBRACE  shift, and go to state 68


State 41

   26 argsdefinition: argsdefinition COMMA . IDENTIFIER
   27               | argsdefinition COMMA . IDENTIFIER ASSIGNMENT expression

    IDENTIFIER  shift, and go to state 69


State 42

   31 argscall: . argscall COMMA expression
   32         | . expression
   33         | . %empty  [EBRACE, COMMA]
   34 expression: . IDENTIFIER ASSIGNMENT expression
   35           | . OBRACE expression EBRACE
   36           | . BITWISEINV expression
   37           | . expression POWER expression
   38           | . expression STAR expression
   39           | . expression DIVISION expression
   40           | . expression REMAINDER expression
   41           | . expression PLUS expression
   42           | . expression MINUS expression
   43           | . expression LEFTSHIFT expression
   44           | . expression RIGHTSHIFT expression
   45           | . expression BITWISEAND expression
   46           | . expression BITWISEXOR expression
   47           | . expression BITWISEOR expression
   48           | . expression LESSTHAN expression
   49           | . expression GREATERTHAN expression
   50           | . expression DOUBLEEQUAL expression
   51           | . expression NOTEQUAL expression
   52           | . expression LESSTHOREQ expression
   53           | . expression GREATTHOREQ expression
   54           | . NOT expression
   55           | . expression AND expression
   56           | . expression OR expression
   57           | . IDENTIFIER
   58           | . INT
   59           | . STRING
   60           | . CHAR
   61           | . FLOAT
   62           | . IDENTIFIER OBRACE argscall EBRACE
   62           | IDENTIFIER OBRACE . argscall EBRACE

    INT         shift, and go to state 28
    FLOAT       shift, and go to state 29
    STRING      shift, and go to state 30
    CHAR        shift, and go to state 31
    IDENTIFIER  shift, and go to state 32
    OBRACE      shift, and go to state 33
    NOT         shift, and go to state 34
    BITWISEINV  shift, and go to state 35

    $default  reduce using rule 33 (argscall)

    argscall    go to state 70
    expression  go to state 71


State 43

   34 expression: . IDENTIFIER ASSIGNMENT expression
   34           | IDENTIFIER ASSIGNMENT . expression
   35           | . OBRACE expression EBRACE
   36           | . BITWISEINV expression
   37           | . expression POWER expression
   38           | . expression STAR expression
   39           | . expression DIVISION expression
   40           | . expression REMAINDER expression
   41           | . expression PLUS expression
   42           | . expression MINUS expression
   43           | . expression LEFTSHIFT expression
   44           | . expression RIGHTSHIFT expression
   45           | . expression BITWISEAND expression
   46           | . expression BITWISEXOR expression
   47           | . expression BITWISEOR expression
   48           | . expression LESSTHAN expression
   49           | . expression GREATERTHAN expression
   50           | . expression DOUBLEEQUAL expression
   51           | . expression NOTEQUAL expression
   52           | . expression LESSTHOREQ expression
   53           | . expression GREATTHOREQ expression
   54           | . NOT expression
   55           | . expression AND expression
   56           | . expression OR expression
   57           | . IDENTIFIER
   58           | . INT
   59           | . STRING
   60           | . CHAR
   61           | . FLOAT
   62           | . IDENTIFIER OBRACE argscall EBRACE

    INT         shift, and go to state 28
    FLOAT       shift, and go to state 29
    STRING      shift, and go to state 30
    CHAR        shift, and go to state 31
    IDENTIFIER  shift, and go to state 32
    OBRACE      shift, and go to state 33
    NOT         shift, and go to state 34
    BITWISEINV  shift, and go to state 35

    expression  go to state 72


State 44

   35 expression: OBRACE expression . EBRACE
   37           | expression . POWER expression
   38           | expression . STAR expression
   39           | expression . DIVISION expression
   40           | expression . REMAINDER expression
   41           | expression . PLUS expression
   42           | expression . MINUS expression
   43           | expression . LEFTSHIFT expression
   44           | expression . RIGHTSHIFT expression
   45           | expression . BITWISEAND expression
   46           | expression . BITWISEXOR expression
   47           | expression . BITWISEOR expression
   48           | expression . LESSTHAN expression
   49           | expression . GREATERTHAN expression
   50           | expression . DOUBLEEQUAL expression
   51           | expression . NOTEQUAL expression
   52           | expression . LESSTHOREQ expression
   53           | expression . GREATTHOREQ expression
   55           | expression . AND expression
   56           | expression . OR expression

    EBRACE       shift, and go to state 73
    OR           shift, and go to state 47
    AND          shift, and go to state 48
    LESSTHAN     shift, and go to state 49
    GREATERTHAN  shift, and go to state 50
    DOUBLEEQUAL  shift, and go to state 51
    NOTEQUAL     shift, and go to state 52
    LESSTHOREQ   shift, and go to state 53
    GREATTHOREQ  shift, and go to state 54
    BITWISEOR    shift, and go to state 55
    BITWISEXOR   shift, and go to state 56
    BITWISEAND   shift, and go to state 57
    LEFTSHIFT    shift, and go to state 58
    RIGHTSHIFT   shift, and go to state 59
    PLUS         shift, and go to state 60
    MINUS        shift, and go to state 61
    STAR         shift, and go to state 62
    DIVISION     shift, and go to state 63
    REMAINDER    shift, and go to state 64
    POWER        shift, and go to state 65


State 45

   37 expression: expression . POWER expression
   38           | expression . STAR expression
   39           | expression . DIVISION expression
   40           | expression . REMAINDER expression
   41           | expression . PLUS expression
   42           | expression . MINUS expression
   43           | expression . LEFTSHIFT expression
   44           | expression . RIGHTSHIFT expression
   45           | expression . BITWISEAND expression
   46           | expression . BITWISEXOR expression
   47           | expression . BITWISEOR expression
   48           | expression . LESSTHAN expression
   49           | expression . GREATERTHAN expression
   50           | expression . DOUBLEEQUAL expression
   51           | expression . NOTEQUAL expression
   52           | expression . LESSTHOREQ expression
   53           | expression . GREATTHOREQ expression
   54           | NOT expression .  [SEMICOLON, EBRACE, COMMA, OR, AND]
   55           | expression . AND expression
   56           | expression . OR expression

    LESSTHAN     shift, and go to state 49
    GREATERTHAN  shift, and go to state 50
    DOUBLEEQUAL  shift, and go to state 51
    NOTEQUAL     shift, and go to state 52
    LESSTHOREQ   shift, and go to state 53
    GREATTHOREQ  shift, and go to state 54
    BITWISEOR    shift, and go to state 55
    BITWISEXOR   shift, and go to state 56
    BITWISEAND   shift, and go to state 57
    LEFTSHIFT    shift, and go to state 58
    RIGHTSHIFT   shift, and go to state 59
    PLUS         shift, and go to state 60
    MINUS        shift, and go to state 61
    STAR         shift, and go to state 62
    DIVISION     shift, and go to state 63
    REMAINDER    shift, and go to state 64
    POWER        shift, and go to state 65

    $default  reduce using rule 54 (expression)

    Conflict between rule 54 and token OR resolved as reduce (OR < NOT).
    Conflict between rule 54 and token AND resolved as reduce (AND < NOT).
    Conflict between rule 54 and token LESSTHAN resolved as shift (NOT < LESSTHAN).
    Conflict between rule 54 and token GREATERTHAN resolved as shift (NOT < GREATERTHAN).
    Conflict between rule 54 and token DOUBLEEQUAL resolved as shift (NOT < DOUBLEEQUAL).
    Conflict between rule 54 and token NOTEQUAL resolved as shift (NOT < NOTEQUAL).
    Conflict between rule 54 and token LESSTHOREQ resolved as shift (NOT < LESSTHOREQ).
    Conflict between rule 54 and token GREATTHOREQ resolved as shift (NOT < GREATTHOREQ).
    Conflict between rule 54 and token BITWISEOR resolved as shift (NOT < BITWISEOR).
    Conflict between rule 54 and token BITWISEXOR resolved as shift (NOT < BITWISEXOR).
    Conflict between rule 54 and token BITWISEAND resolved as shift (NOT < BITWISEAND).
    Conflict between rule 54 and token LEFTSHIFT resolved as shift (NOT < LEFTSHIFT).
    Conflict between rule 54 and token RIGHTSHIFT resolved as shift (NOT < RIGHTSHIFT).
    Conflict between rule 54 and token PLUS resolved as shift (NOT < PLUS).
    Conflict between rule 54 and token MINUS resolved as shift (NOT < MINUS).
    Conflict between rule 54 and token STAR resolved as shift (NOT < STAR).
    Conflict between rule 54 and token DIVISION resolved as shift (NOT < DIVISION).
    Conflict between rule 54 and token REMAINDER resolved as shift (NOT < REMAINDER).
    Conflict between rule 54 and token POWER resolved as shift (NOT < POWER).


State 46
